--- a/pom.xml
+++ b/pom.xml
@@ -5,18 +5,18 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.firefly</groupId>
-        <artifactId>lib-parent-pom</artifactId>
+        <groupId>org.fireflyframework</groupId>
+        <artifactId>fireflyframework-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
-    <groupId>com.firefly</groupId>
-    <artifactId>lib-ecm-esignature-docusign</artifactId>
+    <groupId>org.fireflyframework</groupId>
+    <artifactId>fireflyframework-ecm-esignature-docusign</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Firefly ECM eSignature - DocuSign</name>
+    <name>Firefly Framework - ECM eSignature - DocuSign</name>
     <description>DocuSign eSignature adapter for Firefly ECM, as a standalone provider library.</description>
 
     <properties>
@@ -31,8 +31,8 @@
     <dependencies>
         <!-- ECM Ports -->
         <dependency>
-            <groupId>com.firefly</groupId>
-            <artifactId>lib-ecm-core</artifactId>
+            <groupId>org.fireflyframework</groupId>
+            <artifactId>fireflyframework-ecm</artifactId>
             <version>${project.version}</version>
         </dependency>
 
